Fix use of Java 11 API